// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card 1`] = `
<div
  className="card"
/>
`;

exports[`Card 2 1`] = `
<div
  className="card"
>
  <h4
    className="card-title"
  >
    Title
  </h4>
</div>
`;

exports[`Card 3 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    <h4
      className="card-title"
    >
      Title
    </h4>
    <p
      className="card-text"
    >
      Text
    </p>
  </div>
</div>
`;

exports[`Card 4 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    <h4
      className="card-title"
    >
      Title 3
    </h4>
    <p
      className="card-text"
    >
      Text 3
    </p>
  </div>
</div>
`;
